--- a/project_smart/review-product.html
+++ b/project_smart/review-product.html
@@ -7,14 +7,39 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 	<title>OK Smart</title>
 	<style type="text/css">
+		/* Button */
 		.btn-color{
 			background-color: #fd7e14;
 			color: #fff;
 		}
-		.btn-color:hover{
+		.btn-color:hover{ 
 			background-color: #ffc899;
 			color: #fff;
 		}
+
+		/* Deskripsi Product */
+		.product-detail{
+			margin-top: 125px;
+		}
+		.product-name{
+			margin-bottom: 40px;
+		}
+		.deskripsi{
+			margin-top: 40px;
+		}
+		.product-deskripsi{
+			font-size: 15px;
+			border-bottom: 3px solid #fd7e14;
+			cursor: pointer;
+			margin-bottom: 3px;
+		}
+        .comment{
+            padding: -20px;
+        }
+        .date{
+            font-size: 12px;
+        }
+		/* Dekstop Version */
 		@media (min-width: 992px) {
 			.nav-link{
 				font-size: 20px;
@@ -70,175 +95,56 @@
 </nav>
 <!-- End Header -->
 
-<!-- Slider -->
-<section class="text-center mt-5">
-		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-			<div class="carousel-indicators">
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+<!-- Product Detail -->
+<section class="container product-detail">
+	<div class="row">
+		<h1 class="product-name fw-bold">Nama Barang</h1>
+		<div class="col-lg-8">
+			<img src="styles/img/product.jpg" alt="product" class="img-fluid">
+		</div>
+		<div class="col-lg-4">
+			<h1 class="fw-bold">Harga</h1>
+			<h2 class="harga">Rp. 150.000,-</h2>
+			<div class="d-flex deskripsi">
+				<p class="fw-bold">Deskripsi</p>
+				<p class="product-deskripsi fw-bold ms-5">Review</p>
 			</div>
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="styles/img/slider1.jpg" class="d-block w-100" alt="...">
-					<div class="carousel-caption">
-						<h2>Semua Ada</h2>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, inventore?</p>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<img src="styles/img/slider2.jpg" class="d-block w-100" alt="...">
-					<div class="carousel-caption">
-						<h2>Pengiriman Cepat</h2>
-						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, quisquam.</p>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<img src="styles/img/slider3.jpg" class="d-block w-100" alt="...">
-					<div class="carousel-caption">
-						<h2>Harga Murah</h2>
-						<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, quod.</p>
-					</div>
-				</div>
+			<div class="row comment">
+                <div class="col-2">
+                    <img src="styles/img/pp.png" alt="coment" class="img-fluid rounded-circle" width="50">
+                </div>
+                <div class="d-grid col-10">
+                    <p class="fw-bold">Nama User</p>
+                    <p class="date">2021/11/12 10.22</p>
+                    <p class="fs-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia, unde?</p>
+                </div>
+            </div>
+            <div class="row comment">
+                <div class="col-2">
+                    <img src="styles/img/pp.png" alt="coment" class="img-fluid rounded-circle" width="50">
+                </div>
+                <div class="col-10">
+                    <p class="fw-bold">Nama User</p>
+                    <p class="date">2021/11/12 10.22</p>
+                    <p class="comment">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia, unde?</p>
+                </div>
+            </div>
+			<div class="mt-1">
+				<textarea name="" id="" class="form-control"></textarea>
+                <button class="btn btn-md btn-color mt-3 me-auto">Komentari</button>
 			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
-			</button>
 		</div>
 	</div>
-
 </section>
-<!-- End Slider -->
+<!-- End Product Detail -->
 
 <!-- Product Recomended -->
-<section class="container product-recomended mt-5">
-	<div class="row text-center">
+<section class="container product mt-5">
+	<div class="row text-center mb-3">
 		<div class="col">
 			<h3 class="">Produk Yang Direkomendasikan</h3>
 		</div>
 	</div>
-	<div class="row py-lg-6 row-cols-2 row-cols-sm-2 row-cols-md-5 g-4">
-		<div class="col">
-			<div class="">
-				<svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"/></svg>
-				<div class="card-body">
-					<h5 class="card-text">Nama Produk</h5>
-					<div class="row">
-						<div class="col">
-							<p class="card-text fw-lighter fs-6">Kategori</p>
-						</div>
-						<div class="col">
-							<p class="">Rating <i class="bi bi-star-fill">4,7</i></p>
-						</div>
-					</div>
-					<div class="d-flex justify-content-between align-items-center">
-						<div class="btn-group">
-							<button type="button" class="btn btn-sm btn-color">Lihat Produk</button>
-						</div>
-						<small class="text-muted">Rp.120.000</small>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col">
-			<div class="">
-				<svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"/></svg>
-				<div class="card-body">
-					<h5 class="card-text">Nama Produk</h5>
-					<div class="row">
-						<div class="col">
-							<p class="card-text fw-lighter fs-6">Kategori</p>
-						</div>
-						<div class="col">
-							<p>Rating <i class="bi bi-star-fill">4,7</i></p>
-						</div>
-					</div>
-					<div class="d-flex justify-content-between align-items-center">
-						<div class="btn-group">
-							<button type="button" class="btn btn-sm btn-color">Lihat Produk</button>
-						</div>
-						<small class="text-muted">Rp.120.000</small>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col">
-			<div class="">
-				<svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"/></svg>
-				<div class="card-body">
-					<h5 class="card-text">Nama Produk</h5>
-					<div class="row">
-						<div class="col">
-							<p class="card-text fw-lighter fs-6">Kategori</p>
-						</div>
-						<div class="col">
-							<p>Rating <i class="bi bi-star-fill">4,7</i></p>
-						</div>
-					</div>
-					<div class="d-flex justify-content-between align-items-center">
-						<div class="btn-group">
-							<button type="button" class="btn btn-sm btn-color">Lihat Produk</button>
-						</div>
-						<small class="text-muted">Rp.120.000</small>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col">
-			<div class="">
-				<svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"/></svg>
-				<div class="card-body">
-					<h5 class="card-text">Nama Produk</h5>
-					<div class="row">
-						<div class="col">
-							<p class="card-text fw-lighter fs-6">Kategori</p>
-						</div>
-						<div class="col">
-							<p>Rating <i class="bi bi-star-fill">4,7</i></p>
-						</div>
-					</div>
-					<div class="d-flex justify-content-between align-items-center">
-						<div class="btn-group">
-							<button type="button" class="btn btn-sm btn-color">Lihat Produk</button>
-						</div>
-						<small class="text-muted">Rp.120.000</small>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col">
-			<div class="">
-				<svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"/></svg>
-				<div class="card-body">
-					<h5 class="card-text">Nama Produk</h5>
-					<div class="row">
-						<div class="col">
-							<p class="card-text fw-lighter fs-6">Kategori</p>
-						</div>
-						<div class="col">
-							<p>Rating <i class="bi bi-star-fill">4,7</i></p>
-						</div>
-					</div>
-					<div class="d-flex justify-content-between align-items-center">
-						<div class="btn-group">
-							<button type="button" class="btn btn-sm btn-color">Lihat Produk</button>
-						</div>
-						<small class="text-muted">Rp.120.000</small>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- End Product Recomended -->
-
-<!-- Product -->
-<section class="container product mt-5">
 	<div class="row py-lg-8 row-cols-2 row-cols-sm-2 row-cols-md-4 g-4">
 		<div class="col">
 			<div class="card shadow-sm">
@@ -417,7 +323,7 @@
 			</div>
 		</div>	
 </section>
-<!-- End Product -->
+<!-- End Product Recomended -->
 
 <!-- Footer -->
 <section class="mt-5">
