--- a/project_smart/single-product-page.html
+++ b/project_smart/single-product-page.html
@@ -7,13 +7,39 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 	<title>OK Smart</title>
 	<style type="text/css">
+		/* Button */
 		.btn-color{
 			background-color: #fd7e14;
 			color: #fff;
 		}
-		.btn-color:hover{
+		.btn-color:hover{ 
 			background-color: #ffc899;
 			color: #fff;
+		}
+
+		/* Deskripsi Product */
+		.product-detail{
+			margin-top: 125px;
+		}
+		.product-name{
+			margin-bottom: 40px;
+		}
+		.deskripsi{
+			margin-top: 40px;
+		}
+		.product-deskripsi{
+			font-size: 15px;
+			border-bottom: 3px solid #fd7e14;
+			cursor: pointer;
+			margin-bottom: 3px;
+		}
+
+		/* Dekstop Version */
+		@media (min-width: 992px) {
+			.nav-link{
+				font-size: 20px;
+				text-transform: uppercase;
+			}
 		}
 	</style>
 </head>
@@ -64,50 +90,31 @@
 </nav>
 <!-- End Header -->
 
-<!-- Slider -->
-<section class="text-center">
-		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-			<div class="carousel-indicators">
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+<!-- Product Detail -->
+<section class="container product-detail">
+	<div class="row">
+		<h1 class="product-name fw-bold">Nama Barang</h1>
+		<div class="col-lg-8">
+			<img src="styles/img/product.jpg" alt="product" class="img-fluid">
+		</div>
+		<div class="col-lg-4">
+			<h1 class="fw-bold">Harga</h1>
+			<h2 class="harga">Rp. 150.000,-</h2>
+			<div class="d-flex deskripsi">
+				<p class="product-deskripsi fw-bold">Deskripsi</p>
+				<p class="fw-bold ms-5">Review</p>
 			</div>
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="styles/img/slider1.jpg" class="d-block w-100" alt="...">
-					<div class="carousel-caption">
-						<h2>Semua Ada</h2>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, inventore?</p>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<img src="styles/img/slider2.jpg" class="d-block w-100" alt="...">
-					<div class="carousel-caption">
-						<h2>Pengiriman Cepat</h2>
-						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, quisquam.</p>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<img src="styles/img/slider3.jpg" class="d-block w-100" alt="...">
-					<div class="carousel-caption">
-						<h2>Harga Murah</h2>
-						<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, quod.</p>
-					</div>
-				</div>
+			<div class="text-muted">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit laudantium perferendis blanditiis dignissimos iusto iste. Officiis sed labore velit omnis eius. Nostrum minima deserunt enim corrupti nobis perspiciatis ipsam quos. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem esse eum blanditiis sequi harum quisquam. Perspiciatis voluptate, ab neque ad cumque asperiores tempore, quas ducimus aut nesciunt facilis. Nemo, iste?
 			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
-			</button>
+			<div class="d-flex justify-content-between  mt-5">
+				<a href="#" class="btn btn-lg btn-color">Tambahkan Ke Keranjang</a>
+				<a href="#" class="btn btn-lg btn-color">Beli Sekarang</a>
+			</div>
 		</div>
 	</div>
-
 </section>
-<!-- End Slider -->
+<!-- End Product Detail -->
 
 <!-- Product Recomended -->
 <section class="container product mt-5">
@@ -116,7 +123,7 @@
 			<h3 class="">Produk Yang Direkomendasikan</h3>
 		</div>
 	</div>
-	<div class="row py-lg-8 row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
+	<div class="row py-lg-8 row-cols-2 row-cols-sm-2 row-cols-md-4 g-4">
 		<div class="col">
 			<div class="card shadow-sm">
 				<svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"/></svg>
